--- a/flume-ng-channels/pom.xml
+++ b/flume-ng-channels/pom.xml
@@ -42,6 +42,7 @@ limitations under the License.
 
   <modules>
     <module>flume-jdbc-channel</module>
+    <module>flume-kafka-channel</module>
     <module>flume-file-channel</module>
     <module>flume-recoverable-memory-channel</module>
   </modules>
