--- a/pom.xml
+++ b/pom.xml
@@ -898,6 +898,12 @@ limitations under the License.
         <version>1.4.0-SNAPSHOT</version>
       </dependency>
 
+      <dependency>
+	<groupId>org.apache.flume.flume-ng-channels</groupId>
+	<artifactId>flume-kafka-channel</artifactId>
+	<version>1.4.0-SNAPSHOT</version>
+      </dependency>
+
      <dependency>
        <groupId>org.apache.flume.flume-ng-channels</groupId>
        <artifactId>flume-recoverable-memory-channel</artifactId>
